everything done but delete on creation page mild css and stretch goals

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 		<!-- BootStrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- local styles -->
+		<link href="https://fonts.googleapis.com/css?family=Cinzel|Josefin+Sans|Poiret+One|Poppins|Righteous" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<div ng-include="'partials/navbar.html'"></div>
 		<div class="container">
-			<div ng-view></div>
+			<div ng-view class="ngViewContainer"></div>
 		</div>
 
 
