--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		</div>
 
 
-		<!-- angular -->
-		<script type="text/javascript" src="./lib/node_modules/angular/angular.min.js"></script>
-    	<script type="text/javascript" src="./lib/node_modules/angular-route/angular-route.min.js"></script>
     	<!-- firebase -->
-    	<script type="text/javascript" src="./lib/node_modules/firebase/firebase.js"></script>
+    	<script type="text/javascript" src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+		<!-- angular -->
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.min.js"></script>
+    	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
 
     	<!-- Bootstrap -->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
