--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html ng-app="CharacterBuilds">
 	<head>
-		<title>Character - Builds</title>
+		<title>D&D - Character Builder</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- font awesome -->
